[gd_scene load_steps=7 format=3 uid="uid://b8ynrny1nyrdl"]

[ext_resource type="Script" path="res://addons/godot_owl/window/statistics/statistics_control.gd" id="1_yi3w2"]
[ext_resource type="Texture2D" uid="uid://b43hrsa6iabio" path="res://addons/godot_owl/icons/calendar.png" id="2_rkwi0"]
[ext_resource type="Texture2D" uid="uid://c4awr6hf83cep" path="res://addons/godot_owl/icons/previous.png" id="3_ckv0m"]
[ext_resource type="Texture2D" uid="uid://c5ft8tu8asa" path="res://addons/godot_owl/icons/next.png" id="4_b3rvs"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qysrh"]
content_margin_bottom = 8.0

[sub_resource type="StyleBoxLine" id="StyleBoxLine_m5o4v"]
color = Color(0.498039, 0.498039, 0.498039, 1)

[node name="statistics_modal" type="Control"]
custom_minimum_size = Vector2(480, 320)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yi3w2")

[node name="container" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2

[node name="current_date" type="HBoxContainer" parent="container"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
alignment = 1

[node name="today" type="Button" parent="container/current_date"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
tooltip_text = "Today"
disabled = true
icon = ExtResource("2_rkwi0")

[node name="previous" type="Button" parent="container/current_date"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
tooltip_text = "Previous"
icon = ExtResource("3_ckv0m")
icon_alignment = 1

[node name="date" type="Button" parent="container/current_date"]
custom_minimum_size = Vector2(360, 0)
layout_mode = 2
tooltip_text = "Unzoom"
text = "March Tuesday 5 2024"

[node name="next" type="Button" parent="container/current_date"]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
tooltip_text = "Next"
icon = ExtResource("4_b3rvs")
icon_alignment = 1

[node name="total" type="Label" parent="container"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_qysrh")
text = "No data for this day!"
horizontal_alignment = 1

[node name="day_view" type="VBoxContainer" parent="container"]
custom_minimum_size = Vector2(432, 128)
layout_mode = 2
theme_override_constants/separation = 0

[node name="container" type="HBoxContainer" parent="container/day_view"]
custom_minimum_size = Vector2(0, 128)
layout_mode = 2
theme_override_constants/separation = 2

[node name="Control" type="Panel" parent="container/day_view"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxLine_m5o4v")

[node name="0" type="Label" parent="container/day_view/Control"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -26.0
offset_right = 29.0
grow_vertical = 0
theme_override_colors/font_color = Color(0.498039, 0.498039, 0.498039, 1)
text = "0h"
horizontal_alignment = 1

[node name="12" type="Label" parent="container/day_view/Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -22.5
offset_top = -26.0
offset_right = 6.5
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.498039, 0.498039, 0.498039, 1)
text = "12h"
horizontal_alignment = 1

[node name="24" type="Label" parent="container/day_view/Control"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -37.0
offset_top = -26.0
offset_right = -8.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(0.498039, 0.498039, 0.498039, 1)
text = "24h"
horizontal_alignment = 1

[node name="month_view" type="GridContainer" parent="container"]
visible = false
layout_mode = 2
theme_override_constants/h_separation = 2
theme_override_constants/v_separation = 2
columns = 7

[node name="year_view" type="GridContainer" parent="container"]
visible = false
layout_mode = 2
columns = 4

[connection signal="pressed" from="container/current_date/today" to="." method="_on_today_pressed"]
[connection signal="pressed" from="container/current_date/previous" to="." method="_on_previous_pressed"]
[connection signal="pressed" from="container/current_date/date" to="." method="_on_date_pressed"]
[connection signal="pressed" from="container/current_date/next" to="." method="_on_next_pressed"]
